--- a/scrapers/strava/Cargo.toml
+++ b/scrapers/strava/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.68"
+chrono = "0.4.23"
 dotenv = "0.15.0"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+lazy_static = "1.4.0"
+reqwest = { version = "0.11.13", features = ["json", "blocking"] }
 serde = "1.0.151"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
