Revert "feat: reset to just regular program"
This reverts commit 510cf69ee2bb93ca2c5b73e9e92569a4a1d34e0b.

--- a/scrapers/strava/Cargo.toml
+++ b/scrapers/strava/Cargo.toml
@@ -4,11 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.68"
-chrono = "0.4.23"
 dotenv = "0.15.0"
-lazy_static = "1.4.0"
-reqwest = { version = "0.11.13", features = ["json", "blocking"] }
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = "1.0.151"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
