--- a/scrapers/strava/Cargo.toml
+++ b/scrapers/strava/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.68"
 chrono = { version = "0.4.23", features = ["serde"] }
 dotenv = "0.15.0"
+lazy_static = "1.4.0"
 reqwest = { version = "0.11.13", features = ["json"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = "1.0.151"
