--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,5 +11,6 @@ lazy_static = "1.4.0"
 reqwest = { version = "0.11.13", features = ["json"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = "1.0.151"
+things3 = "0.0.4"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
