--- a/content/package.json
+++ b/content/package.json
@@ -27,5 +27,11 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@mapbox/polyline": "^1.1.1",
+		"@types/d3-geo": "^3.0.3",
+		"@types/mapbox__polyline": "^1.0.2",
+		"d3-geo": "^3.1.0"
+	}
 }
