--- a/content/package.json
+++ b/content/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/mapbox-gl": "^2.7.10",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -30,6 +31,8 @@
 	"type": "module",
 	"dependencies": {
 		"@mapbox/polyline": "^1.1.1",
-		"@types/mapbox__polyline": "^1.0.2"
+		"@turf/bbox": "^6.5.0",
+		"@types/mapbox__polyline": "^1.0.2",
+		"mapbox-gl": "^2.12.0"
 	}
 }
