--- a/content/package.json
+++ b/content/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-vercel": "^1.0.1",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/mapbox-gl": "^2.7.10",
