--- a/content/package.json
+++ b/content/package.json
@@ -34,6 +34,7 @@
 		"@mapbox/polyline": "^1.1.1",
 		"@turf/bbox": "^6.5.0",
 		"@types/mapbox__polyline": "^1.0.2",
+		"dayjs": "^1.11.7",
 		"mapbox-gl": "^2.12.0"
 	}
 }
