--- a/content/package.json
+++ b/content/package.json
@@ -15,7 +15,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-vercel": "^1.0.1",
 		"@sveltejs/kit": "^1.0.0",
-		"@types/mapbox-gl": "^2.7.10",
+		"@types/mapbox__polyline": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -32,9 +32,6 @@
 	"type": "module",
 	"dependencies": {
 		"@mapbox/polyline": "^1.1.1",
-		"@turf/bbox": "^6.5.0",
-		"@types/mapbox__polyline": "^1.0.2",
-		"dayjs": "^1.11.7",
-		"mapbox-gl": "^2.12.0"
+		"dayjs": "^1.11.7"
 	}
 }
