--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
           echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u gleich --password-stdin
           docker build -t ghcr.io/gleich/website_api .
           docker push ghcr.io/gleich/website_api
-      - run: docker run caprover/cli-caprover:v2.1.1 caprover deploy --caproverUrl https://api.mattglei.ch --caproverPassword ${{ secrets.CAPROVER_PASSWORD }} --caproverApp ap --imageName ghcr.io/gleich/website_api
+      - run: docker run caprover/cli-caprover:v2.1.1 caprover deploy --caproverUrl https://api.mattglei.ch --caproverPassword ${{ secrets.CAPROVER_PASSWORD }} --caproverApp api --imageName ghcr.io/gleich/website_api
