--- a/content/package.json
+++ b/content/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-vercel": "^1.0.1",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/d3": "^7.4.0",
 		"@types/mapbox-gl": "^2.7.10",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -27,13 +28,14 @@
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"@types/mapbox__polyline": "^1.0.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@mapbox/polyline": "^1.1.1",
 		"@turf/bbox": "^6.5.0",
-		"@types/mapbox__polyline": "^1.0.2",
+		"d3": "^7.8.2",
 		"dayjs": "^1.11.7",
 		"mapbox-gl": "^2.12.0"
 	}
