--- a/content/package.json
+++ b/content/package.json
@@ -12,31 +12,31 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-vercel": "^1.0.1",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-vercel": "^3.0.1",
+		"@sveltejs/kit": "^1.20.4",
 		"@types/d3": "^7.4.0",
-		"@types/mapbox-gl": "^2.7.10",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@types/mapbox-gl": "^2.7.11",
+		"@types/mapbox__polyline": "^1.0.2",
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"@types/mapbox__polyline": "^1.0.2"
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^3.59.2",
+		"svelte-check": "^3.4.4",
+		"tslib": "^2.5.3",
+		"typescript": "^5.1.3",
+		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@mapbox/polyline": "^1.1.1",
+		"@mapbox/polyline": "^1.2.0",
 		"@turf/bbox": "^6.5.0",
-		"d3": "^7.8.2",
-		"dayjs": "^1.11.7",
-		"mapbox-gl": "^2.12.0"
+		"d3": "^7.8.5",
+		"dayjs": "^1.11.8",
+		"mapbox-gl": "^2.15.0"
 	}
 }
